--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.14",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
