--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.14",
+    "localbase": "^0.7.7",
+    "pinia": "^3.0.4",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
