--- a/package.json
+++ b/package.json
@@ -37,3 +37,13 @@
     "vite-plugin-vue-devtools": "^8.0.2"
   }
 }
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+  "tailwind:init": "tailwindcss init -p",
+  // 🎯 ADICIONE ESTAS DUAS LINHAS
+  **"deploy": "gh-pages -d dist",**
+  **"deploy:build": "npm run build && npm run deploy"**
+},
