--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
     "unplugin-vue-components": "^30.0.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-vue-devtools": "^8.0.2"
   }
 }
